# brick-widgets-pandoc

./: ChangeLog.md  LICENSE  README.md  brick-widgets-pandoc.cabal
programs/: PandocViewer.hs
src/Brick/Widgets/: Pandoc.hs
